# WarpFactory

./: .git-blame-ignore-revs  .gitignore  .pylintrc  APPLICATIONS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.binder/: postBuild  requirements.txt
.github/workflows/: docs.yml  tests.yml
docs/: applications.md  contributing.md  debugging_qt_integration.md  gpu.md  index.md  installation.md  interactive.md  parity.md  quickstart.md
examples/: README.md  alcubierre_energy_conditions.py  interactive_explorer.ipynb  metric_scalars.py  optimize_bubble.py
warpfactory/: __init__.py
warpfactory/analyzer/: __init__.py  energy_conditions.py  frame.py  momentum_flow.py  scalar_invariants.py
warpfactory/grid/: __init__.py  adm_constraints.py  energy_conditions.py  exact.py  hawking_ellis.py  hyperdual.py  interpolation.py  metrics.py  modified_gravity.py  plotting.py  scalars.py  shape_functions.py  si_units.py  solver.py  tensor.py  three_plus_one.py  warp_shell.py
warpfactory/gui/: __init__.py  energy.py  explorer.py  parameters.py  plotter.py
warpfactory/interactive/: __init__.py  explorer.py  model.py
warpfactory/metrics/: __init__.py  alcubierre.py  base.py  lentz.py  minkowski.py  three_plus_one.py  van_den_broeck.py  warp_shell.py
warpfactory/optimize/: __init__.py  ansatz.py  evaluate.py  search.py
warpfactory/physics/: __init__.py  anec.py  bondi_sachs.py  causal.py  conservation.py  junction.py  quantum.py  quantum_inequality.py  tidal.py  trace_anomaly.py
warpfactory/solver/: __init__.py  christoffel.py  energy.py  finite_difference.py  ricci.py  spherical.py  tensor_utils.py
warpfactory/spacetime/: __init__.py  cmb_hazard.py  geodesic.py  horizon.py  interpolation.py  lensing.py  singularity.py
warpfactory/tests/: conftest.py  test_adm_constraints.py  test_advanced_physics.py  test_analyzer.py  test_anec.py  test_bondi_sachs.py  test_cmb_hazard.py  test_exact.py  test_grid.py  test_grid_energy_conditions.py  test_grid_scalars.py  test_gui.py  test_gui_interactions.py  test_hawking_ellis.py  test_interactive.py  test_junction.py  test_lensing.py  test_metrics.py  test_modified_gravity.py  test_optimize.py  test_paper_validation.py  test_quantum_inequality.py  test_solver_physics.py  test_spacetime.py  test_torch.py  test_torch_advanced.py  test_trace_anomaly.py  test_units.py  test_visualizer.py
warpfactory/torch/: __init__.py  analyzer.py  batch.py  benchmark.py  christoffel.py  energy.py  metric.py  ricci.py  visualizer.py
warpfactory/units/: __init__.py  constants.py  converter.py  quantity.py  system.py
warpfactory/visualizer/: __init__.py  colormaps.py  slice.py  tensor.py  three_plus_one.py
