[tool.poetry]
name = "warpfactory"
version = "0.1.0"
description = "Python port of WarpFactory - A MATLAB-based warp drive metric solver"
authors = ["JohnsterID"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "warpfactory", from = "." },
]
include = ["warpfactory/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
scipy = "^1.12.0"
matplotlib = "^3.8.3"
# Optional heavy backends: the core numpy/scipy pipeline must work
# without them (warpfactory.torch, warpfactory.gui, and the ipywidgets
# front end of warpfactory.interactive are the only consumers, all
# import-guarded or self-contained subpackages).
torch = { version = "^2.2.1", optional = true }
PyQt6 = { version = "^6.6.1", optional = true }
PyQt6-Qt6 = { version = "^6.6.1", optional = true }
ipywidgets = { version = "^8.1.2", optional = true }
# ipython is a hard dependency of ipywidgets, declared explicitly
# because warpfactory.interactive imports IPython.display directly.
ipython = { version = ">=8.0", optional = true }

[tool.poetry.extras]
torch = ["torch"]
gui = ["PyQt6", "PyQt6-Qt6"]
jupyter = ["ipywidgets", "ipython"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
ruff = "^0.15.21"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["warpfactory/tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=warpfactory"
markers = [
    "gui: marks tests that require Qt GUI libraries",
    "gpu: marks tests that require GPU support"
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: import sorting (isort-compatible),
# B: bugbear, C4: comprehensions, SIM: simplify, NPY: numpy-specific.
select = ["E", "W", "F", "I", "B", "C4", "SIM", "NPY"]

[tool.ruff.lint.per-file-ignores]
# Optional-backend guards import late by design (importorskip pattern).
"warpfactory/tests/test_torch.py" = ["E402"]
"warpfactory/tests/test_torch_advanced.py" = ["E402"]

[tool.mypy]
# No python_version pin: modern numpy stubs use `type` statements that
# mypy rejects when told to target 3.9, so check against the running
# interpreter (which matches the installed numpy).
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "scipy.*",
    "matplotlib.*",
    "torch.*",
    "ipywidgets.*"
]
ignore_missing_imports = true
